# suppr

./: .gitignore  .travis.yml  README.md  result.txt  suppr.cabal  template.txt  travis.yml
app/: Main.hs
bench/: Bench.hs
src/: JavaParser.hs
test/: Spec.hs
test/test-data/: bar.txt  foo.java
test/test-data/bar/: baz.java  qux.java
